<resources>
    <string name="app_name">Tarea1_Android</string>
    <string name="act1_name">Ingresar Datos</string>
    <string name="act2_name">Confirmar Datos</string>
    <string name="btn1">Siguiente</string>
    <string name="form_nombre">Nombre Completo</string>
    <string name="form_fechaNacimiento">Fecha Nacimiento</string>
    <string name="form_telefono">Teléfono</string>
    <string name="form_correo">Email</string>
    <string name="form_descripcion">Descripción Contacto</string>
    <string name="btn2">Editar Datos</string>
    <string name="lbl_nombre">Nombre Completo: </string>
    <string name="lbl_fechaNacimiento">Fecha Nacimiento: </string>
    <string name="lbl_telefono">Teléfono: </string>
    <string name="lbl_correo">Email: </string>
    <string name="lbl_descripcion">Descripción Contacto: </string>

</resources>
