<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.luis.tarea1_android.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act1_name"
        style="@style/AppTitulo"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_nombre"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fechaNacimiento"/>

    <DatePicker
        android:id="@+id/dpFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_telefono"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_correo"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tiDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_descripcion"/>


    <Button
        android:id="@+id/btMiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        />
</LinearLayout>
